@@ -1,14 +1,15 @@
 Changes
+MANIFEST
+META.yml			# Will be created by "make dist"
+Makefile.PL
+README
 lib/DashProfiler.pm
+lib/DashProfiler/Apache.pm
+lib/DashProfiler/Auto.pm
 lib/DashProfiler/Core.pm
 lib/DashProfiler/Import.pm
 lib/DashProfiler/Sample.pm
 lib/DashProfiler/UserGuide.pm
-lib/DashProfiler/Auto.pm
-Makefile.PL
-MANIFEST
-META.yml			# Will be created by "make dist"
-README
 t/00.load.t
 t/01.core.t
 t/02.sample.t
