@@ -11,7 +11,12 @@ Measure overhead and subtract where appropriate, as far as possible, including f
 Flush at rollover (new profile node created - may not be reliable/safe)?
 Option to Flush (_if_due) only at period end
 Move DashProfiler::Dump* packages out to modules DashProfiler::DumpTo::*
-Add DashProfiler::Apache to do handler plumbing for periods?
+Extend DashProfiler::Apache to do handler plumbing for periods?
+
+=head2 DashProfiler 1.07 - r32 - Aug 16 2007
+
+  Added DashProfiler::Apache
+  Added -optional syntax to DashProfiler::Import
 
 =head2 DashProfiler 1.06 - r29 - Aug 14 2007
 
